[gd_scene load_steps=16 format=3 uid="uid://ckgcuoqhywtrw"]

[ext_resource type="Texture2D" uid="uid://bbclgsjc3iw2f" path="res://enemies/enemy_types/snf/assets/snfffnsnnffffsnffffismell small dog1.png" id="1_4jdp0"]
[ext_resource type="Script" path="res://enemies/enemy_types/snf/snfffff.gd" id="1_pvjdk"]
[ext_resource type="Texture2D" uid="uid://boe17ps7c16fn" path="res://enemies/enemy_types/snf/assets/snfffnsnnffffsnffffismell small dog2.png" id="2_b1q50"]
[ext_resource type="Script" path="res://sfx_player/autoload/sf_link.gd" id="2_lufs2"]
[ext_resource type="Script" path="res://enemies/enemy_types/snf/snf_movement.gd" id="3_qe44y"]
[ext_resource type="Texture2D" uid="uid://dw06lw2g4tkdq" path="res://enemies/enemy_types/enemy_assets/enemy_sprite_one.aseprite" id="3_vorly"]

[sub_resource type="Resource" id="Resource_k2egf"]
script = ExtResource("2_lufs2")
sf_name = "bork_one"
sf_vol = -1.0
sf_pitch = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_wet1m"]
atlas = ExtResource("3_vorly")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcjcd"]
atlas = ExtResource("3_vorly")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_6v7vc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_4jdp0")
}, {
"duration": 1.0,
"texture": ExtResource("2_b1q50")
}],
"loop": true,
"name": &"HMGGGH",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wet1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcjcd")
}],
"loop": true,
"name": &"snf",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5puo5"]
size = Vector2(1.5, 6.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_24ajn"]
size = Vector2(1.5, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dk7ig"]
size = Vector2(12, 1.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_126dh"]
size = Vector2(12, 1.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ii35l"]

[node name="snfffff" type="Node2D" node_paths=PackedStringArray("pet_area")]
script = ExtResource("1_pvjdk")
pet_area = NodePath("pet_area")
pet_sf = SubResource("Resource_k2egf")

[node name="snf_anim" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6v7vc")
animation = &"snf"
autoplay = "snf"
frame = 1
frame_progress = 0.0574302
offset = Vector2(0.5, 0)

[node name="snf_movement" type="Node2D" parent="." node_paths=PackedStringArray("snf", "roll_timer", "wall_areas")]
script = ExtResource("3_qe44y")
snf = NodePath("..")
roll_timer = NodePath("../roll_timer")
wall_areas = [NodePath("../up_area"), NodePath("../down_area"), NodePath("../left_area"), NodePath("../right_area")]

[node name="roll_timer" type="Timer" parent="."]
wait_time = 0.8

[node name="left_area" type="Area2D" parent="."]
visible = false
position = Vector2(-5, 2)
collision_layer = 0
collision_mask = 34

[node name="left_shape" type="CollisionShape2D" parent="left_area"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_5puo5")

[node name="right_area" type="Area2D" parent="."]
visible = false
position = Vector2(7, 3)
collision_layer = 0
collision_mask = 34

[node name="right_shape" type="CollisionShape2D" parent="right_area"]
position = Vector2(0.25, 2)
shape = SubResource("RectangleShape2D_24ajn")

[node name="down_area" type="Area2D" parent="."]
visible = false
position = Vector2(0, 8)
collision_layer = 0
collision_mask = 34

[node name="down_shape" type="CollisionShape2D" parent="down_area"]
position = Vector2(1, 0.25)
shape = SubResource("RectangleShape2D_dk7ig")

[node name="up_area" type="Area2D" parent="."]
visible = false
position = Vector2(-1, 0)
collision_layer = 0
collision_mask = 34

[node name="up_shape" type="CollisionShape2D" parent="up_area"]
position = Vector2(1, 1.625)
shape = SubResource("RectangleShape2D_126dh")

[node name="pet" type="Node2D" parent="."]

[node name="pet_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="pet_shape" type="CollisionShape2D" parent="pet_area"]
shape = SubResource("RectangleShape2D_ii35l")

[connection signal="timeout" from="roll_timer" to="snf_movement" method="_on_roll_timer_timeout"]
[connection signal="area_entered" from="left_area" to="snf_movement" method="_on_left_area_area_entered"]
[connection signal="body_entered" from="left_area" to="snf_movement" method="_on_left_area_body_entered"]
[connection signal="area_entered" from="right_area" to="snf_movement" method="_on_right_area_area_entered"]
[connection signal="body_entered" from="right_area" to="snf_movement" method="_on_right_area_body_entered"]
[connection signal="area_entered" from="down_area" to="snf_movement" method="_on_down_area_area_entered"]
[connection signal="body_entered" from="down_area" to="snf_movement" method="_on_down_area_body_entered"]
[connection signal="area_entered" from="up_area" to="snf_movement" method="_on_up_area_area_entered"]
[connection signal="body_entered" from="up_area" to="snf_movement" method="_on_up_area_body_entered"]
[connection signal="area_entered" from="pet_area" to="." method="_on_pet_area_area_entered"]
[connection signal="area_exited" from="pet_area" to="." method="_on_pet_area_area_exited"]
